--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "json-server": "^1.0.0-beta.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
     "pug": "^3.0.3"
