--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "json-server": "^1.0.0-beta.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
