--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "json-server": "^1.0.0-beta.3",
     "method-override": "^3.0.0",
