--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -21,7 +22,10 @@
     "json-server": "^1.0.0-beta.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.1",
+    "mongoose-slug-updater": "^3.3.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "pug": "^3.0.3",
     "toastr": "^2.1.4"
   },
