--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "json-server": "^1.0.0-beta.3",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.1",
     "mongoose-slug-updater": "^3.3.0",
     "morgan": "^1.10.0",
