--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^7.0.5",
     "pug": "^3.0.3",
     "serverless-http": "^3.2.0",
+    "socket.io": "^4.8.1",
     "tinymce": "^7.9.1",
     "toastr": "^2.1.4"
   },
